--- a/trendz-app-deployment.yml
+++ b/trendz-app-deployment.yml
@@ -34,15 +34,15 @@ spec:
 #                      - working-node
       containers:
         - name: trendz-app-container
-          image: thingsboard/trendz:1.10.3
+          image: thingsboard/trendz:1.11.0-RC7
           imagePullPolicy: IfNotPresent
           resources:
             limits:
-              cpu:    "4000m"
-              memory: "4000Mi"
+              cpu:    "2200m"
+              memory: "3700M"
             requests:
-              cpu:    "4000m"
-              memory: "4000Mi"
+              cpu:    "2200m"
+              memory: "3700M"
           ports:
             - name: app-api-pod
               protocol: TCP
@@ -56,6 +56,14 @@ spec:
               value: "thingsboardDefaultSigningKey"
             - name: TB_API_URL
               value: "http://thingsboard-app:8080"
+            - name: SCRIPT_ENGINE_PROVIDER
+              value: "DOCKER_CONTAINER"
+            - name: SCRIPT_ENGINE_DOCKER_PROVIDER_URL
+              value: "trendz-python-executor-service:8181"
+            - name: SCRIPT_ENGINE_TIMEOUT
+              value: "30000"
+            - name: SCRIPT_ENGINE_WEBSOCKET_CONCURRENCY
+              value: "5"
           envFrom:
             - configMapRef:
                 name: trendz-app-db-config
@@ -111,7 +119,7 @@ metadata:
   name: trendz-app-service
   namespace: trendz
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: trendz-app-pod-label
   ports:
